--- a/static/styles/Table_content.css
+++ b/static/styles/Table_content.css
@@ -1,13 +1,17 @@
 /* Table of Contents (TOC) Styling */
 .table-of-contents {
-    font-size: 1.4rem;
+    font-size: var(--font-size-h4);
     color: var(--primary-dark-blue);
     position: fixed;
     left: 90px;
-    top: 130px;
+    top: 80px;
     line-height: 1.8;
     padding: 10px;
-    max-width: 300px; /* Set maximum width */
+    max-width: 250px; /* Set maximum width */
+    left: 30px; /* Adjust the distance from the left */
+    background-color: var(--background-color-light); /* Optional: Add background for clarity */
+
+
 }
 
 /* Add shadow line on the left side */
@@ -15,10 +19,8 @@
     content: '';
     position: fixed;
     top: 0;
-    left: calc(90px - 2px); /* Aligns shadow line with TOC */
     width: 2px;
     height: 100vh; /* Full viewport height */
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.05)); /* Gradient shadow */
     z-index: 1; /* Places shadow behind the TOC */
     pointer-events: none; /* Prevents the line from blocking other interactions */
 }
@@ -52,7 +54,7 @@
 .table-of-contents a {
     text-decoration: none;
     color: var(--primary-dark-blue);
-    font-size: 1.4rem;
+    font-size: var(--font-size-h4);
     font-weight: bold;
     display: block;
     padding: 5px 0;
